language/tests/error/InvalidAssignmentInIfCond.sl
toeminto double(x) {
  return 2 * x;
}

toeminto piä() {
  if (double(2) = 4) {
    42;
  }
}